--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,9 +92,9 @@
                             </a>
                         </li>
                         <li class="nav-item ng-hide" ng-show="ur == 'DEANERY'">
-                            <a class="nav-link" ui-sref-active="active" ui-sref="students">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="groups">
                                 <i class="fa fa-users"></i>
-                                Студенты <!-- Группы -->
+                                Группы
                             </a>
                         </li>
 
@@ -189,7 +189,7 @@
                 <!--<li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="arrangeCertification">Добавить аттестацию</a></li>-->
                 <li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="assignment">Назначение</a></li>
                 <li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="statements">Ведомости</a></li>
-                <li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="students">Студенты</a></li>
+                <li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="groups">Группы</a></li>
 
 <!--                <li class="list-inline-item ng-hide" ng-show="ur == 'SECRETARY'"><a ui-sref-active="active" ui-sref="addSubgroup">Добавить подгруппу</a></li>-->
 <!--                <li class="list-inline-item ng-hide" ng-show="ur == 'SECRETARY'"><a ui-sref-active="active" ui-sref="link">Настроить списки &lt;!&ndash;Связать (под)группу и преподавателя&ndash;&gt;</a></li>-->
@@ -240,6 +240,7 @@
     <script src="Controllers/StatementId.js"></script>
     <script src="Controllers/State.js"></script>
     <script src="Controllers/SessionStatement.js"></script>
+    <script src="Controllers/Groups.js"></script>
     <script src="Controllers/Students.js"></script>
 
 <!--    <script src="Controllers/AddSubgroup.js"></script>-->
