--- a/src/main/resources/static/Templates/subject.html
+++ b/src/main/resources/static/Templates/subject.html
@@ -97,7 +97,7 @@
                         <tr>
                             <th class="text-center"></th>
                             <th class="text-center">Номер группы</th>
-                            <th class="text-center">Предмет</th>
+                            <th class="text-center">Дисциплина</th>
                             <th class="text-center"></th>
                         </tr>
                         </thead>
