--- a/src/main/resources/static/Templates/statementId.html
+++ b/src/main/resources/static/Templates/statementId.html
@@ -35,7 +35,7 @@
                 <thead>
                 <tr>
                     <th class="text-center">Номер группы</th>
-                    <th class="text-center">Предмет</th>
+                    <th class="text-center">Дисциплина</th>
                     <th class="text-center w-25"></th>
                 </tr>
                 </thead>
