--- a/src/main/resources/static/Templates/arrangeCertification.html
+++ b/src/main/resources/static/Templates/arrangeCertification.html
@@ -1,7 +1,7 @@
 <div ng-show="ur == 'DEANERY'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="statements">Список аттестаций</a></li>
+        <li class="breadcrumb-item"><a ui-sref="viewAttestationsDeanery">Список аттестаций</a></li>
         <li class="breadcrumb-item active" aria-current="page">Добавление аттестации</li>
     </ol>
 
