--- a/src/main/resources/static/Templates/assignment.html
+++ b/src/main/resources/static/Templates/assignment.html
@@ -3,7 +3,7 @@
     <div class="p-0 col-md-10 mx-auto">
         <div class="mt-5">
             <div class="font-weight-bold h4 text-center m-0">
-                <nav class="nav nav-tabs nav-justified">
+                <nav class="nav nav-tabs nav-justified pointer">
                     <a class="nav-item nav-link active" data-toggle="tab" data-target="#head-department" role="tab" aria-controls="head-department" aria-selected="true">
                         Назначение зав. каф.
                     </a>
