--- a/src/main/resources/static/Templates/attestationStatementDeputyDean.html
+++ b/src/main/resources/static/Templates/attestationStatementDeputyDean.html
@@ -1,9 +1,9 @@
-<div ng-show="ur == 'DEANERY'">
+<div ng-show="ur == 'DEPUTY_DEAN'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="statements">Список аттестаций</a></li>
-        <li class="breadcrumb-item"><a ui-sref="statementId({id: attestationId})">Список ведомостей. Аттестационные ведомости</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Просмотр ведомости</li>
+        <li class="breadcrumb-item"><a ui-sref="viewAttestationsDeputyDean">Список аттестаций</a></li>
+        <li class="breadcrumb-item"><a ui-sref="attestationStatementsDeputyDean({id: attestationId})">Аттестационные ведомости</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Просмотр аттестационной ведомости</li>
     </ol>
 
     <div class="my-3 pt-3 card col-md-10 mx-auto border-info">
