--- a/src/main/resources/static/Templates/contentAttestation.html
+++ b/src/main/resources/static/Templates/contentAttestation.html
@@ -62,7 +62,11 @@
                         <th class="text-center">Имя</th>
                         <th class="text-center">Отчество</th>
                         <th class="text-center">Номер зачётной книжки</th>
-                        <th class="text-center" style="min-width: 10em">Работает</th>
+                        <th class="text-center" style="min-width: 10em">Работает
+                            <i class="fa fa-info-circle text-info" data-toggle="tooltip" data-placement="top"
+                               title="Приступил к работе в дистанционном формате.">
+                            </i>
+                        </th>
                         <th class="text-center" style="min-width: 10em">Аттестован</th>
                         <th class="text-center ng-hide" ng-show="isHead">Назначенный преподаватель</th>
                     </tr>
