--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -14,7 +14,7 @@
             <!--связанной с проведением аттестаций,<br>-->
             включая те, дедлайн которых уже прошёл,<br>
             перейдите в раздел
-            <a class="bold text-info" ui-sref="statements">
+            <a class="bold text-info" ui-sref="viewAttestationsDeanery">
                 <b>"Ведомости"</b>
             </a>
             .<br>
@@ -42,8 +42,31 @@
             <br>
             Для того чтобы отметить отчисленных<br>
             студентов, необходимо перейти в раздел<br>
-            <a class="bold text-info" ui-sref="students">
+            <a class="bold text-info" ui-sref="studentsDeanery">
                 <b>"Студенты"</b>
+            </a>
+             и выбрать группу, далее в<br>
+            выведенном списке обозначить надлежащих<br>
+            студентов как отчисленных, поставив<br>
+            галочку напротив них. Для сохранения<br>
+            внесённых изменений необходимо<br>
+            нажать на кнопку <b>"Сохранить изменения"</b>.
+            <br>
+        </div>
+
+        <div class="text-center ng-hide" ng-show="ur == 'DEPUTY_DEAN'">
+            Для просмотра ведомостей аттестаций,<!--текущей ситуации,--><br>
+            <!--связанной с проведением аттестаций,<br>-->
+            включая те, дедлайн которых уже прошёл,<br>
+            перейдите в раздел
+            <a class="bold text-info" ui-sref="viewAttestationsDeputyDean">
+                <b>"Ведомости"</b>
+            </a>
+            .<br>
+            Для того чтобы изменить текущий семестр группы и отметить отчисленных<br>
+            студентов, необходимо перейти в раздел<br>
+            <a class="bold text-info" ui-sref="groupsDeputyDean">
+                <b>"Группы"</b>
             </a>
              и выбрать группу, далее в<br>
             выведенном списке обозначить надлежащих<br>
@@ -114,11 +137,11 @@
             Вопросы и пожелания<br>
             принимаются по электронной почте<br>
             <a class="bold text-info" href="https://mail.voenmeh.ru/mail/?_task=mail&_action=compose">
-                <b>dekanat_i@voenmeh.ru</b>
+                <b>i97716@voenmeh.ru</b>
             </a>
             или
             <a class="bold text-info" href="https://mail.voenmeh.ru/mail/?_task=mail&_action=compose">
-                <b>bondarev_es@voenmeh.ru</b>
+                <b>norte@voenmeh.ru</b>
             </a>
         </div>
         <br>
