--- a/src/main/resources/static/Templates/attestationStatementsDeputyDean.html
+++ b/src/main/resources/static/Templates/attestationStatementsDeputyDean.html
@@ -1,16 +1,15 @@
-<div ng-show="ur == 'DEANERY'">
+<div ng-show="ur == 'DEPUTY_DEAN'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="statements">Список аттестаций</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Список ведомостей. Аттестационные ведомости</li>
+        <li class="breadcrumb-item"><a ui-sref="viewAttestationsDeputyDean">Список аттестаций</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Аттестационные ведомости</li>
     </ol>
 
     <div class="py-4 px-0 my-4 card col-md-10 mx-auto border-info">
         <form class="simple-form" name="statementForm">
 
-            <div class="font-weight-bold h4 text-center mt-4">Список ведомостей.</div>
-            <div class="font-weight-bold h4 text-center">Аттестационные ведомости</div>
-            <div class="col-sm-4 col-lg-3 mx-auto my-4">
+            <div class="font-weight-bold h4 text-center my-4">Аттестационные ведомости</div>
+            <div class="col-sm-4 col-lg-3 mx-auto mb-5">
                 <ui-select ng-model="group.selected"
                            ng-change="selectedOnGroupList()"
                            ng-disabled="!groupList.length"
@@ -34,7 +33,7 @@
             <table class="table table-hover table-striped table-sm table-responsive-sm" ng-if="statements.length">
                 <thead>
                 <tr>
-                    <th class="text-center">Номер группы</th>
+                    <th class="text-center w-25">Номер группы</th>
                     <th class="text-center">Дисциплина</th>
                     <th class="text-center w-25"></th>
                 </tr>
@@ -46,7 +45,7 @@
                     <td class="text-center border-info">
                         <button class="btn btn-md btn-info text-white"
                                 type="button"
-                                ui-sref="state({attestationId: statement.attestationId, certificationAttestationId: statement.certificationAttestationId})"
+                                ui-sref="attestationStatementDeputyDean({attestationId: statement.attestationId, certificationAttestationId: statement.certificationAttestationId})"
                                 title="Просмотр ведомости">
                             <i class="fa fa-eye"></i>
                             Просмотр ведомости
