--- a/src/main/resources/static/Templates/sessionStatementDeanery.html
+++ b/src/main/resources/static/Templates/sessionStatementDeanery.html
@@ -1,8 +1,8 @@
 <div ng-show="ur == 'DEANERY'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="statements">Список ведомостей. Сессионные ведомости</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Просмотр ведомости</li>
+        <li class="breadcrumb-item"><a ui-sref="sessionStatementsDeanery">Сессионные ведомости</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Просмотр сессионной ведомости</li>
     </ol>
 
     <div class="my-3 pt-3 card col-md-10 mx-auto border-info">
